<resources>
    <string name="app_name">CARDIOFIT</string>
    <string name="Tv1">CARDIOFIT</string>
    <string name="Item_perfil">Perfil</string>
    <string name="Item_ajustes">Ajustes</string>
    <string name="Item_home">Home</string>
    <string name="PreguntaRegistro">¿No tienes cuenta?</string>
    <string name="Correo_Electronico">Correo Electronico</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Usuario">Usuario</string>
    <string name="Peso">Peso</string>
    <string name="Edad">Edad</string>
    <string name="Altura">Altura</string>
    <string name="Boton_Ir_Registro"><u>Registrate</u></string>
    <string name="Boton_Registar">Registrarse</string>
    <string name="Boton_Iniciar_Sesion">Iniciar Sesion</string>
    <string name="Texto_Iniciar_Sesion">Iniciar Sesion</string>
    <string name="Texto_Registrarse">Registrarse</string>
    <string name="Mostrar_Contraseña">Mostrar contraseña</string>
    <string name="Aceptar_Politicas_Terminos">Acepta las condiciones y politicas de privacidad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OpcionAjustes">Acerca de</string>
    <string name="OpcionPerfil">Cuenta</string>
    <string name="OpcionRegistroEntrenamiento">Entrenamiento</string>
    <string name="OpcionHistorial">Historial</string>
    <string name="OpcionCerrarSesion">Salir</string>
    <string name="TituloConfiguracion">Configuracion</string>
    <string name="BotonInformacion">Informacion sobre la aplicacion</string>
    <string name="BotonVersion">Version de aplicacion</string>
    <string name="BotonPoliticas">Terminos y politicas de privacidad</string>
    <string name="MeterCorreoInsertar">Insertar correo electronico</string>
    <string name="InsertaEjercicio">Ejercicio realizado</string>
    <string name="InsertaPesoUtilizado">Peso utilizado</string>
    <string name="InsertaCategoria">Categoria de actividad</string>
    <string name="MostrarDatos">Ingresar correo electronico</string>
    <string name="TituloActividades">Historial de Actividades</string>
    <string name="TituloEjercicio">Ejercicio:</string>
    <string name="TituloPesoUsado">Peso usado:</string>
    <string name="TituloCategoria">Categoria:</string>
    <string name="TituloNuevoEntrenamiento">Nuevo Entrenamiento</string>
    <string name="TituloPerfil">Datos Personales</string>
    <string name="TituloNombreCuenta">Nombre:</string>
    <string name="TituloCorreoCuenta">Cuenta:</string>
    <string name="TituloContrasenaCuenta">Contraseña:</string>
    <string name="TituloEdadCuenta">Edad:</string>
    <string name="TituloPesoCuenta">Peso:</string>
    <string name="TituloAlturaCuenta">Estatura:</string>
    <string name="BotonPerfil">Consultar perfil</string>
    <string name="BotonVerActividades">Ver actividades</string>

</resources>
