<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagendefondo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".VentanaRegistro">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/logo_blanco"
        android:id="@+id/Logo"
        android:scaleType="fitCenter"
        android:layout_marginBottom="30dp"
        android:paddingTop="30dp"
        android:layout_margin="0dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingTop="0dp"
        android:layout_margin="10dp"
        android:src="@drawable/aplicaciontitulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/Logo"
        android:layout_marginTop="35dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/trans_white_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Texto_Registrarse"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/Usuario"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_account_correo"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/RegistroNombre"
                android:layout_marginBottom="10dp"
                android:inputType="text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/Correo_Electronico"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_account_usuario"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/RegistroNombreUsuario"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/Contrasena"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_account_contrasena"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:id="@+id/RegistroContraseña"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/Edad"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_account_edad"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/RegistroEdad"
                android:layout_marginBottom="10dp"
                android:inputType="number"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/Peso"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_account_peso"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/RegistroPeso"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/Altura"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_account_peso"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/RegistroAltura"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal"/>

            <RadioButton
                android:id="@+id/AceptaTerminos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:checked="false"
                android:paddingLeft="5dp"
                android:text="@string/Aceptar_Politicas_Terminos"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/BotonDeRegistro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/register_button"
                android:onClick="Guardar_Registro"
                android:text="@string/Boton_Registar"
                android:textColor="@color/white"
                android:textStyle="normal" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>