<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagendefondo"
    android:fitsSystemWindows="true"
    tools:context=".VentanaAjustes">

    <LinearLayout
        android:id="@+id/LinearLayoutAjustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/TituloConfiguracion"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/trans_white_rectangle"
            android:textSize="35dp"
            android:textColor="#000000"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"/>

        <TableLayout
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/trans_white_rectangle"
            android:stretchColumns="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/BotonInformacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00FF4081"
                    android:gravity="center"
                    android:onClick="Aplicacion"
                    android:text="@string/BotonInformacion"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/BotonVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00FF4081"
                    android:gravity="center"
                    android:onClick="Version"
                    android:text="@string/BotonVersion"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/BotonPoliticas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00FF4081"
                    android:gravity="center"
                    android:onClick="AceptarTerminos"
                    android:text="@string/BotonPoliticas"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </TableRow>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/logo_blanco"
                android:id="@+id/Logo"
                android:scaleType="fitCenter"
                android:layout_marginBottom="30dp"
                android:paddingTop="30dp"
                android:layout_margin="0dp"/>
        </TableLayout>
    </LinearLayout>

</ScrollView>