<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mylist">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tituloejercicios"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/TituloEjercicio"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
            <TextView
                android:id="@+id/ejercicios"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/titulopesousado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/TituloPesoUsado"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
            <TextView
                android:id="@+id/peso_usado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">
            <TextView
                android:id="@+id/titulocategoria"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/TituloCategoria"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
            <TextView
                android:id="@+id/categoria"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:style="@android:style/Widget.DeviceDefault.TextView.ListSeparator" />
        </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>